--- a/privacy.html
+++ b/privacy.html
@@ -3,16 +3,10 @@ layout: page
 title: Privacy Policy
 group: navigation
 ---
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Untitled Document</title>
-</head>
-
+<html>
+<head></head>
 <body>
-<h2 align="center">LocalUp Solutions, LLC Website Privacy Policy</h2>
+<h1 align="center">LocalUp Solutions, LLC Website Privacy Policy</h1><br />
 <p>&nbsp;</p>
 <p><strong>YOUR PRIVACY MATTERS</strong></p>
 <p>This website is operated by LocalUp Solutions, LLC (&ldquo;LocalUp&rdquo;).  LocalUp is committed to respecting and protecting your privacy. Visitors may access this website while remaining anonymous and without revealing any personal information (except as referred to below under &ldquo;Cookies&rdquo;). Occasionally, and in order to provide products or services, and/or relevant, desired information concerning products or services, LocalUp may request personal information from you. As a LocalUp website user or registrant, you are always entitled to update your personal information if necessary or ask any questions about this Privacy Policy by e-mailing:</p>
