moved other headers too

--- a/terms.html
+++ b/terms.html
@@ -1,13 +1,11 @@
 ---
 layout: page
-title: Terms of Use
+title: LOCALUP SOLUTIONS, LLC WEBSITE LEGAL TERMS OF USE
 group: navigation
 ---
 <html>
 <head></head>
 <body>
-<p><h1>LOCALUP SOLUTIONS, LLC WEBSITE LEGAL TERMS OF USE</h1></p><br />
-
 <strong>Please Read Carefully Before Using This Website:</strong> The following terms and conditions (&ldquo;Terms of Use&rdquo;) govern your use of this website (the &ldquo;Site&rdquo;).  By using the Site and/or any information, content or materials made available on the Site, you irrevocably agree that such use is subject to these Terms of Use.  If you do not agree to these Terms of Use, you may not use the Site.<br /><br />
   LocalUp Solutions, LLC, the operator of the Site (&ldquo;LocalUp&rdquo;), expressly reserves the right to modify the Terms of Use at any time in its sole discretion, and without notice to you, by including such alteration and/or modification in these Terms of Use.  Any continued use by you of the Site after the posting of such modified Terms of Use shall be deemed to indicate your irrevocable agreement to such modified Terms of Use.  Accordingly, if at any time you do not agree to be subject to any modified Terms of Use, you may no longer use the Site.</p><br />
 <h2>1.     SITE CONTENT AND SITE USE LICENSE</h2><br />
