updated localup solutions to localup

--- a/security.html
+++ b/security.html
@@ -6,7 +6,7 @@ group: navigation
 <html>
 <head></head>
 <body>
-<p>At LocalUp Solutions, we take the storage and transmission of private data very seriously.  Our security
+<p>At LocalUp, we take the storage and transmission of private data very seriously.  Our security
 measures include:</p>
 <ul>
 <li>SSL encryption to protect private data transmitted via the Internet</li>
@@ -18,8 +18,8 @@ measures include:</p>
 </ul>
 <p>For detailed information about PCI Data Security Standards, please visit
 <a href="https://www.pcisecuritystandards.org/security_standards/pci_dss.shtml">https://www.pcisecuritystandards.org/security_standards/pci_dss.shtml.</a></p>
-<p>For questions or comments regarding LocalUp Solutions Security Policy, please contact us at:<br>
-LocalUp Solutions, llc<br>
+<p>For questions or comments regarding LocalUp Security Policy, please contact us at:<br>
+LocalUp, llc<br>
 3500 Boston St.<br>
 Baltimore, MD 21224<br>
 Tel:  1‐800‐689‐6613<br>
