--- a/security.html
+++ b/security.html
@@ -6,8 +6,7 @@ group: navigation
 <html>
 <head></head>
 <body>
-<p>At LocalUp, we take the storage and transmission of private data very seriously.  Our security
-measures include:</p>
+<p>At OrderUp, we take the storage and transmission of private data very seriously.  Our security measures include:</p>
 <ul>
 <li>SSL encryption to protect private data transmitted via the Internet</li>
 <li>Strong, standards‐based encryption for sensitive data stored in our database</li>
@@ -18,12 +17,12 @@ measures include:</p>
 </ul>
 <p>For detailed information about PCI Data Security Standards, please visit
 <a href="https://www.pcisecuritystandards.org/security_standards/pci_dss.shtml">https://www.pcisecuritystandards.org/security_standards/pci_dss.shtml.</a></p>
-<p>For questions or comments regarding LocalUp Security Policy, please contact us at:<br>
-LocalUp, llc<br>
+<p>For questions or comments regarding OrderUp’s Security Policy, please contact us at:<br>
+OrderUp, llc<br>
 3500 Boston St.<br>
 Baltimore, MD 21224<br>
 Tel:  1‐800‐689‐6613<br>
-Email:  legal@localupsolutions.com<br>
+Email:  legal@orderup.com<br>
 </p>
 </body>
 </html>
