--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@ group: navigation
 <p>&nbsp;</p>
 <p><strong>YOUR PRIVACY MATTERS</strong></p>
 <p>This website is operated by OrderUp, LLC (&ldquo;OrderUp&rdquo;).  OrderUp is committed to respecting and protecting your privacy. Visitors may access this website while remaining anonymous and without revealing any personal information (except as referred to below under &ldquo;Cookies&rdquo;). Occasionally, and in order to provide products or services, and/or relevant, desired information concerning products or services, OrderUp may request personal information from you. As an OrderUp website user or registrant, you are always entitled to update your personal information if necessary or ask any questions about this Privacy Policy by e-mailing:</p>
-<p>privacy@LocalUp.com <br />
+<p>privacy@OrderUp.com <br />
   subject line: Privacy Request<br />
   <br />
   Because OrderUp is committed to protecting your privacy, OrderUp will not sell, rent or otherwise disclose this information to any third party, except as described in this Privacy Policy. OrderUp maintains all personal information as private to the best of the  company&rsquo;s ability. However, personal information may be disclosed under the limited circumstances described below, and by submitting your personal information, you agree that OrderUp may do so.</p>
