--- a/privacy.html
+++ b/privacy.html
@@ -6,10 +6,10 @@ group: navigation
 <html>
 <head></head>
 <body>
-<h1 align="center">OrderUp, LLC Website Privacy Policy</h1><br />
+<h1 align="center">OrderUp, Inc. Website Privacy Policy</h1><br />
 <p>&nbsp;</p>
 <p><strong>YOUR PRIVACY MATTERS</strong></p>
-<p>This website is operated by OrderUp, LLC (&ldquo;OrderUp&rdquo;).  OrderUp is committed to respecting and protecting your privacy. Visitors may access this website while remaining anonymous and without revealing any personal information (except as referred to below under &ldquo;Cookies&rdquo;). Occasionally, and in order to provide products or services, and/or relevant, desired information concerning products or services, OrderUp may request personal information from you. As an OrderUp website user or registrant, you are always entitled to update your personal information if necessary or ask any questions about this Privacy Policy by e-mailing:</p>
+<p>This website is operated by OrderUp, Inc. (&ldquo;OrderUp&rdquo;).  OrderUp is committed to respecting and protecting your privacy. Visitors may access this website while remaining anonymous and without revealing any personal information (except as referred to below under &ldquo;Cookies&rdquo;). Occasionally, and in order to provide products or services, and/or relevant, desired information concerning products or services, OrderUp may request personal information from you. As an OrderUp website user or registrant, you are always entitled to update your personal information if necessary or ask any questions about this Privacy Policy by e-mailing:</p>
 <p>privacy@OrderUp.com <br />
   subject line: Privacy Request<br />
   <br />
@@ -23,7 +23,7 @@ group: navigation
 <p>OrderUp reserves the right to call or send registrants email communications from time to time regarding product and company updates, technical or administrative issues, legal notices, promotional offers or other important information about the website and products and service considered valuable or essential to your continued ability to use them properly. OrderUp does not intentionally send unsolicited emails to anyone who has requested that OrderUp not contact them. <br />
    <br />
   <strong>HOW TO OPT-OUT</strong></p>
-<p>When you provide personally identifiable information through a form on a OrderUp website, you have the option to opt-in to receiving communication from OrderUp. If you opt-in and change your mind at any time, you may tell the company that you do not wish to receive these messages by sending an email at privacy@OrderUp.com, by clearly following the &quot;unsubscribe&quot; instructions at the bottom of any email you receive, or by contacting the privacy department at the e-mail address above to unsubscribe to mailing lists. </p>
+<p>When you provide personally identifiable information through a form on an OrderUp website, you have the option to opt-in to receiving communication from OrderUp. If you opt-in and change your mind at any time, you may tell the company that you do not wish to receive these messages by sending an email at privacy@OrderUp.com, by clearly following the &quot;unsubscribe&quot; instructions at the bottom of any email you receive, or by contacting the privacy department at the e-mail address above to unsubscribe to mailing lists. </p>
 <p><strong>WHAT INFORMATION IS SHARED</strong></p>
 <p>OrderUp does share non-personal, non-individual information from which individuals cannot be identified and which do not relate to individuals in aggregate form with third parties for business purposes, such as consultants and advisors to the company or advertisers.  OrderUp will not disclose personal information to any third parties without your consent except in the following very limited circumstances. </p>
 <p><strong>PARTNERS AND AGENTS</strong></p>
