--- a/security.html
+++ b/security.html
@@ -18,8 +18,8 @@ group: navigation
 <p>For detailed information about PCI Data Security Standards, please visit
 <a href="https://www.pcisecuritystandards.org/security_standards/pci_dss.shtml">https://www.pcisecuritystandards.org/security_standards/pci_dss.shtml.</a></p>
 <p>For questions or comments regarding OrderUp’s Security Policy, please contact us at:<br>
-OrderUp, llc<br>
-3500 Boston St.<br>
+OrderUp, Inc.<br>
+2400 Boston St., Suite 201<br>
 Baltimore, MD 21224<br>
 Tel:  1‐800‐689‐6613<br>
 Email:  legal@orderup.com<br>
