--- a/legacy_privacy.html
+++ b/legacy_privacy.html
@@ -6,12 +6,9 @@ group: navigation
 <html>
 <head></head>
 <body>
-<h1>GROUPON, INC. PRIVACY STATEMENT</h1><br />
+<h1 align="center">OrderUp, Inc. Website Privacy Policy</h1><br />
 <p>&nbsp;</p>
-<h4><strong>YOUR PRIVACY MATTERS</strong></h4>
-<p>&nbsp;</p>
-<h4><strong>Effective Date: July XX, 2016</strong></h4>
-
+<p><strong>YOUR PRIVACY MATTERS</strong></p>
 <p>This website is operated by OrderUp, Inc. (&ldquo;OrderUp&rdquo;).  OrderUp is committed to respecting and protecting your privacy. Visitors may access this website while remaining anonymous and without revealing any personal information (except as referred to below under &ldquo;Cookies&rdquo;). Occasionally, and in order to provide products or services, and/or relevant, desired information concerning products or services, OrderUp may request personal information from you. As an OrderUp website user or registrant, you are always entitled to update your personal information if necessary or ask any questions about this Privacy Policy by e-mailing:</p>
 <p>privacy@OrderUp.com <br />
   subject line: Privacy Request<br />
