--- a/privacy.html
+++ b/privacy.html
@@ -3,51 +3,107 @@ layout: page
 title: Privacy Policy
 group: navigation
 ---
-<html>
-<head></head>
-<body>
-<h1>GROUPON, INC. PRIVACY STATEMENT</h1><br />
-<p>&nbsp;</p>
-<h4><strong>YOUR PRIVACY MATTERS</strong></h4>
-<p>&nbsp;</p>
-<h4><strong>Effective Date: July XX, 2016</strong></h4>
 
-<p>This website is operated by OrderUp, Inc. (&ldquo;OrderUp&rdquo;).  OrderUp is committed to respecting and protecting your privacy. Visitors may access this website while remaining anonymous and without revealing any personal information (except as referred to below under &ldquo;Cookies&rdquo;). Occasionally, and in order to provide products or services, and/or relevant, desired information concerning products or services, OrderUp may request personal information from you. As an OrderUp website user or registrant, you are always entitled to update your personal information if necessary or ask any questions about this Privacy Policy by e-mailing:</p>
-<p>privacy@OrderUp.com <br />
-  subject line: Privacy Request<br />
-  <br />
-  Because OrderUp is committed to protecting your privacy, OrderUp will not sell, rent or otherwise disclose this information to any third party, except as described in this Privacy Policy. OrderUp maintains all personal information as private to the best of the  company&rsquo;s ability. However, personal information may be disclosed under the limited circumstances described below, and by submitting your personal information, you agree that OrderUp may do so.</p>
-<p>This Privacy Policy applies to all OrderUp websites and domains, except that a Privacy Policy or statement posted on a specific website operated by OrderUp, if any, will apply instead of this Privacy Policy.</p>
-<p><strong>Collection of Personal Information</strong></p>
-<p>To participate in certain activities and to obtain certain services offered on our web site, you will be asked to provide varying amounts of personal information.</p>
-<p>In addition to the information you provide, OrderUp may also collect information during your visit to an OrderUp website through our automatic data collection tools, which may include Web beacons, cookies, embedded Web links, and other commonly used information-gathering tools. These tools collect certain standard information that your browser sends to our website such as your browser type and language, access times, and the address of the website from which you arrived at an OrderUp website. They may also collect information about your Internet Protocol (IP) address, clickstream behavior (i.e. the pages you view, the links you click, and other actions you take in connection with OrderUp websites) and product information. OrderUp may also use some of these automatic data collection tools in connection with certain emails sent from OrderUp and therefore may collect information using these tools when you open the email or click on a link contained in the email.</p>
-<p><strong>HOW ORDERUP USES PERSONAL INFORMATION</strong></p>
-<p>OrderUp uses your personal information to better meet individual needs, to respond to specific requests for information, to send promotional materials, and to make you aware of new or similar products or offerings in which you might be interested. </p>
-<p>OrderUp reserves the right to call or send registrants email communications from time to time regarding product and company updates, technical or administrative issues, legal notices, promotional offers or other important information about the website and products and service considered valuable or essential to your continued ability to use them properly. OrderUp does not intentionally send unsolicited emails to anyone who has requested that OrderUp not contact them. <br />
-   <br />
-  <strong>HOW TO OPT-OUT</strong></p>
-<p>When you provide personally identifiable information through a form on an OrderUp website, you have the option to opt-in to receiving communication from OrderUp. If you opt-in and change your mind at any time, you may tell the company that you do not wish to receive these messages by sending an email at privacy@OrderUp.com, by clearly following the &quot;unsubscribe&quot; instructions at the bottom of any email you receive, or by contacting the privacy department at the e-mail address above to unsubscribe to mailing lists. </p>
-<p><strong>WHAT INFORMATION IS SHARED</strong></p>
-<p>OrderUp does share non-personal, non-individual information from which individuals cannot be identified and which do not relate to individuals in aggregate form with third parties for business purposes, such as consultants and advisors to the company or advertisers.  OrderUp will not disclose personal information to any third parties without your consent except in the following very limited circumstances. </p>
-<p><strong>PARTNERS AND AGENTS</strong></p>
-<p>OrderUp shares information with trusted agents who provide specific services you have requested and/or administer information offered at the OrderUp website, for example, service providers who help manage, track and respond to customer orders, inquiries, information requests, etc. OrderUp may also share information with authorized advertisers of certain products and services. OrderUp may also share information with authorized advertisers and partners in order to execute joint marketing initiatives. These parties do not use or otherwise disclose any information except as authorized agents for the purpose of providing the products and services that you have requested or administering the activities on OrderUp&rsquo;s behalf, or participating in joint marketing initiatives with OrderUp. Any company that OrderUp shares personally identifiable information with will have executed a confidentiality agreement, requiring that they keep all data received confidential.</p>
-<p><strong>THIRD PARTY VENDORS</strong></p>
-<p>We occasionally hire other companies to provide limited services on our behalf. We will only provide those companies the information they need to deliver the service, and they are prohibited from using that information for any other purpose.</p>
-<p><strong>LEGAL REQUIREMENTS AND INVESTIGATIONS</strong></p>
-<p>OrderUp will disclose your personal information to a third party if required to do so by law or if, in good faith, OrderUp believes that such action is necessary to: (1) comply with the law or with legal process; (2) protect and defend the company&rsquo;s rights and property or prevent fraud; (3) protect the company against abuse, misuse or unauthorized use of OrderUp's products or services; or (4) protect the personal safety or property of personnel, users or the public (among other things, this means that if you provide false or deceptive registration information or attempt to pose as someone else, information about you including your computer's IP address - may be disclosed to a third party (including the recipient of an email) as part of any type of investigation into your actions.</p>
-<p><strong>IP ADDRESSES</strong></p>
-<p>An IP address is a number that is assigned to your computer when you are using your browser on the Internet. The servers that serve the OrderUp website automatically identify a computer by its IP address. If OrderUp, in good faith, determines that you have used the service to menace, threaten, harass, intimidate or otherwise deceptively pose as another person, your actions will be investigated and your IP address may be disclosed to the recipient of any email, their legal counsel or representatives, and law enforcement officials as part of such an investigation.</p>
-<p><strong>COOKIES</strong></p>
-<p>A &quot;cookie&quot; is a small piece of data stored on a user's browser, and contains non-personally identifiable information about the user. When you visit the website, OrderUp may place a &quot;cookie&quot; in order to improve your experience by recognizing you when you visit the website and in order to allow the company to optimize the information presented based on your demonstrated areas of interest. Cookies may also be used to compile information about website usage. This information can be used to enhance the content of the website and make your experience more informative. If you subsequently provide us with personal information such as your email address, we will associate any cookies on your browser with that information such that you will no longer be an anonymous visitor to the site.  </p>
-<p>If you've set your browser to reject cookies, you can still use this website, but you may need to re-enter information that would normally be obtained from the cookie (for example, your email address). You can also set your browser to warn you before accepting cookies. If you do, you will receive a warning message each time the website attempts to place a cookie on your hard drive.</p>
-<p><strong>LINKED WEBSITES</strong></p>
-<p>This website contains links to other websites. Please be aware that OrderUp is not responsible for the privacy practices of such other websites. OrderUp encourages users to be aware when they leave this website and to read the privacy statements of each website they visit that collects personal information. While OrderUp carefully chooses the websites to link to, this Privacy Policy applies solely to information collected on OrderUp&rsquo;s own websites</p>
-<p><strong>SALE OF ASSETS</strong></p>
-<p>OrderUp may transfer its database, including personal information contained therein, to a third party who acquires all or substantially all of the assets or stock of OrderUp whether by merger, acquisition, reorganization or otherwise.</p>
-<p><strong>SECURITY</strong></p>
-<p>OrderUp employs industry-standard security procedures and processes to safeguard the confidentiality of users' personal information. OrderUp, or agents and partners on behalf of OrderUp, do everything in reasonable control to protect your information. Where one of OrderUp&rsquo;s partners or agents has access to or maintains sensitive personal information, the company enters into confidentiality agreements in order to ensure the privacy of such user information. Internally, access to all users' and registrants' personally identifiable information is restricted to those employees who need access in order to fulfill their job responsibilities. Furthermore, OrderUp employees who deal with user information are kept up to date on various security and privacy practice issues as they arise.</p>
-<p>Finally, the servers for the website are stored in a physically secured, offsite facility. Beyond the physical security of your information, OrderUp also backs up servers regularly to prevent loss of data. While the goal is to safeguard users' and members' personal information, OrderUp cannot ensure or warrant the security of any transmission and your information is submitted at your own risk. If you have questions about these security practices please feel free to send an email to privacy@OrderUp.com.</p>
-<p><strong>ACCEPTANCE OF PRIVACY POLICY AND NOTIFICATION OF CHANGES</strong></p>
-<p>By using this website or other websites operated by OrderUp, including www.OrderUp.com, you signify your acceptance of this Privacy Policy, as amended from time to time in accordance with this paragraph. If you do not agree with the content of this Privacy Policy, please do not use this website.  OrderUp may revise this Privacy Policy from time-to-time and reserves the right to do so. If OrderUp decides to change this Privacy Policy, the company will post the new policy on the website. As policies are subject to change at any time and without prior notice, OrderUp encourages you to check the website whenever you might have questions or concerns. If at any point OrderUp decides to use personally identifiable information in a manner different from that stated at the time it was collected, OrderUp will notify users by way of an email to obtain their consent as a condition of doing so. You will still have the opportunity to elect not to have OrderUp use your information in this different manner. OrderUp will not use your information other than in accordance with the Privacy Policy under which it was collected absent permission to do otherwise</p>
-</body>
+<html>
+  <head></head>
+  <body>
+    <h1>GROUPON, INC. PRIVACY STATEMENT</h1><br />
+    <p>&nbsp;</p>
+    <h4><strong>PIVACY STATEMENT</strong></h4>
+    <h4><strong>Effective Date: July XX, 2016</strong></h4>
+
+    <p>&nbsp;</p>
+
+    <p>
+      This Privacy Statement (“<strong>Privacy Statement</strong>”) explains how Groupon, Inc. (“<strong>Groupon</strong>,” “<strong>us</strong>,” “<strong>our</strong>,” and “<strong>we</strong>”) uses your information and applies to all who use our Web site – www.groupon.com, mobile applications, touch technologies, electronic services, social networking sites, interactive features, online services – or any of our described online activities we own or control, including any online activities owned, controlled, or operated by Groupon Affiliates, (collectively, the “<strong>Site</strong>”).
+    </p>
+
+    <p>
+      <strong>
+        By using the Site, you agree to the terms of this Privacy Statement. If you do not agree with the practices described in this Privacy Statement, please do not provide us with your personal information or interact with the Site.
+      </strong>
+    </p>
+
+    <p>
+      We may modify this Privacy Statement at any time. If we make any material changes, we will notify you by email (sent to the email address specified in your account) or by means of notice on the Site prior to the change becoming effective. You can determine when this Privacy Statement was last revised by referring to the ”Effective Date” above. You can review the last version of this Privacy Statement here.
+    </p>
+
+    <p>
+      This Privacy Statement is organized as follows:
+    </p>
+
+    <ol>
+      <li><strong><a href="#Item1">Types of Information We Collect</a></strong><br></li>
+      <li><strong><a href="#Item2">Your Choices</a></strong><br></li>
+      <li><strong><a href="#Item3">How Groupon Uses Information</a></strong><br></li>
+      <li><strong><a href="#Item4">When and Why Groupon Discloses Personal Information</a></strong><br></li>
+      <li><strong><a href="#Item5">How Groupon Collects Information</a></strong><br></li>
+      <li><strong><a href="#Item6">Security of Personal Information</a></strong><br></li>
+      <li><strong><a href="#Item7">Accessing and Correcting Personal Information</a></strong><br></li>
+      <li><strong><a href="#Item8">Social Networks</a></strong><br></li>
+      <li><strong><a href="#Item9">Privacy Practices of Third Parties</a></strong><br></li>
+      <li><strong><a href="#Item10">Business Transfers and Corporate Changes</a></strong><br></li>
+      <li><strong><a href="#Item11">Notice to Residents of Countries outside the United States of America</a></strong><br></li>
+      <li><strong><a href="#Item12">Children’s Privacy</a></strong><br></li>
+      <li><strong><a href="#Item13">Contact Us; California Privacy Rights and Other Countries</a></strong><br></li>
+      <li><strong><a href="#Item14">Glossary of Terms</a></strong><br></li>
+    </ol>
+
+    <p></p><h3><a name="Item1">1. Types of Information We Collect</a></h3><p></p>
+
+    <p>
+      We will collect information, including Personal Information and Non-Identifying Information, when you interact with us and the Site, for example when you:
+    </p>
+
+    <ul>
+      <li>access or use the Site;</li>
+      <li>register, subscribe, or create an account with Groupon;</li>
+      <li>open or respond to our e-mails;</li>
+      <li>refer friends, family, or others to Groupon; </li>
+      <li>contact customer service or use other customer support tools;</li>
+      <li>provide information to enroll or participate in Other Programs provided on behalf of, or together with, Business Partners;</li>
+      <li>visit any page online that displays our ads or content;</li>
+      <li>purchase products or services on or through the Site;</li>
+      <li>connect or link to any Site via social networking sites;</li>
+      <li>post comments to Online Communities; and</li>
+      <li>provide information to our Vendors.</li>
+    </ul>
+
+    <p>
+      This Privacy Statement does not apply to the collection of information in any way other than as listed above.
+    </p>
+
+    <p></p><h3><a name="Item2">2. Your Choices</a></h3><p></p>
+
+    <p>
+      We think that you benefit from a more personalized experience when we know more about you and what you like. However, you can limit the information you provide to Groupon, and you can limit the communications that Groupon sends to you.
+    </p>
+
+
+    <p><strong>(a) Commercial E-mails</strong></p>
+    <p>
+      You may choose not to receive commercial e-mails from us by following the instructions contained in any of the commercial e-mails we send or by logging into your account and adjusting your e-mail preferences. Please note that even if you unsubscribe from commercial email messages, we may still e-mail you non-commercial e-mails related to your account and your transactions on the Site. You may update your subscription preferences at any time.
+    </p>
+
+    <p><strong>(b) Cookies and Tracking</strong></p>
+    <p>
+      You may manage how your browser handles Cookies by adjusting its privacy and security settings. Browsers are different, so refer to instructions related to your browser to learn about cookie-related and other privacy and security settings that may be available. You can opt-out of being targeted by certain Third-Party Ad-Servers and Groupon-served ads online using the National Advertising Initiative’s Opt-Out Tool or the Digital Advertising Alliance’s (DAA) About Ads Opt-Out Tool. For more information review our Cookies Policy.
+    </p>
+    <p>
+      Currently, we do not alter our data collection and use practices in response to Do Not Track signals.
+    </p>
+    <p>
+      We use Non-Identifiable Information to directly serve you interest-based ads on third party websites. Interest-based ads served directly by Groupon on third party sites will display the AdChoices icon. If you prefer not to receive interest-based ads from Groupon on third party sites, you can click on the AdChoices icon in the ad, which will direct you to the Your Groupon AdChoices page where you can opt-out of receiving interest-based ads served by Groupon.
+    </p>
+    <p>
+      Groupon, Inc. is a member of the Digital Advertising Alliance, which is a media marketing and trade association that has issued self-regulatory guidelines for online advertising. Visit the DAA’s AdChoices page to learn more about interest-based advertising and to opt-out of having cookies placed by ad-serving companies.
+    </p>
+
+    <p><strong></strong></p>
+    <p></p>
+
+    <p><strong></strong></p>
+    <p></p>
+
+  </body>
 </html>
